# VibeLLM

./: .gitignore  LICENSE  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml  tests.yml
llm-proxy-skills/: llm_proxy.py
llm_proxy/: __init__.py  __main__.py  benchmark.py  claude_skill.py  cli.py  models.py  proxy.py  router.py  translators.py
myllm/: __main__.py  benchmark.py  cli.py  config.py  privacy.py  server.py
myllm-skills/: llm_proxy.py
vibellm/: __main__.py  benchmark.py  claude_skill.py  cli.py  config.py  models.py  proxy.py
vibellm-skills/: llm_proxy.py
