[project]
name = "vibellm"
version = "0.1.0"
description = "Lightweight local LLM proxy with multiple provider management, automatic failover, privacy protection, and latency-based selection."
readme = "README.md"
keywords = [
  "llm",
  "proxy",
  "openai",
  "anthropic",
  "gemini",
  "reverse-proxy",
  "rate-limit",
  "failover",
  "latency",
  "benchmark",
  "claude-code",
]
authors = [
  { name = "LLM Proxy", email = "none@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.2",
  "httpx>=0.25.0",
  "click>=8.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pyyaml>=6.0",
  "tabulate>=0.9.0",
]

[project.urls]
"Homepage" = "https://github.com/easyhealth/VibeLLM"
"Bug Reports" = "https://github.com/easyhealth/VibeLLM/issues"
"Source" = "https://github.com/easyhealth/VibeLLM"

[project.scripts]
vibellm = "vibellm.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
